<resources>
    <string name="app_name">Productize</string>
    <string name="app_name_bold"><b>Productize</b></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title"><b>Productize</b></string>
    <string name="nav_header_subtitle">Productivity|Priority</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- Navigation -->
    <string name="nav_menu_title">My Tasks</string>
    <string name="nav_menu_title2">Communicate</string>
    <string name="menu_stats">Stats</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_home">Home</string>
    <string name="menu_work">Work</string>
    <string name="menu_other">Other</string>
    <string name="menu_share">Share</string>
    <string name="menu_about">About</string>

    <!-- Intro screen -->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Be The Change</string>
    <string name="slide_1_desc">True <b>Productivity</b> come\'s only when you set your <b>Priorities</b> right.</string>

    <string name="slide_2_title">Taking Action</string>
    <string name="slide_2_desc">The first step begins by making small changes in your daily habits. Any task in mind? Write it down.</string>

    <string name="slide_3_title">Work Towards It</string>
    <string name="slide_3_desc">Fix some amount of time in a day and complete the tasks.</string>

    <string name="slide_4_title">Analyse Your Progress</string>
    <string name="slide_4_desc">At the end of the day, you can always know how much <b>Productized</b> you were! </string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="empty_task">It\'s empty here!</string>

    <string name="onboarding_text1">Before we begin, a few questions</string>
    <string name="onboarding_text_pref_location"> Choose your preferred work space</string>
    <string name="onboarding_text_pref_hours"> How long can you work at this work space?</string>
    <string name="onboarding_text_pref_time1"> What time do you usually work at <b>HOME</b>?</string>
    <string name="onboarding_text_pref_time2"> What time do you usually work at your <b>WORK</b> place?</string>
    <string name="onboarding_and"> and </string>

    <string name="edit_fragment">Edit fragment</string>
    <string name="channel_name">tasks</string>
    <string name="channel_description">Get notified when tasks are set</string>

    <string name="title_activity_on_going_task_activitiy">OnGoingTaskActivitiy</string>
    <string name="exit">Next</string>
    <string name="task_text">Task Text</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>
