<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_nav_stats"
            android:title="@string/menu_stats" />
        <item
            android:id="@+id/nav_schedule_task"
            android:icon="@drawable/ic_nav_schedule"
            android:title="@string/menu_schedule"
            android:checkable="false"/>

    </group>

    <item android:title="@string/nav_menu_title" android:checkable="true">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_nav_home_hollow"
                android:title="@string/menu_home" />
            <item
                android:id="@+id/nav_work"
                android:icon="@drawable/ic_nav_work_hollow"
                android:title="@string/menu_work" />

            <item
                android:id="@+id/nav_other"
                android:icon="@drawable/ic_nav_other_hollow"
                android:title="@string/menu_other" />
        </menu>
    </item>



    <item android:title="@string/nav_menu_title2">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_nav_about"
                android:title="@string/menu_about" />
        </menu>
    </item>

</menu>
