<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activites.ScheduleTask"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linear_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">


        <TextView
            android:id="@+id/onboarding_loc_text"
            style="@style/TextAppearance.AppTheme.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/onboarding_text_pref_location"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:gravity="center|start"
                android:paddingTop="10dp">

                <RadioButton
                    android:id="@+id/home_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:layout_marginBottom="2dp"
                    android:checked="true"
                    android:text="@string/menu_home" />

                <RadioButton
                    android:id="@+id/work_radio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/menu_work" />

            </RadioGroup>

            <ImageView
                android:id="@+id/avatar_img"
                android:layout_width="210dp"
                android:layout_height="71dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:paddingTop="7dp"
                android:src="@drawable/home_avatar" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/onboarding_hours_text"
            style="@style/TextAppearance.AppTheme.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:text="@string/onboarding_text_pref_hours"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="3dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip15m"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_marginStart="2dp"
                android:text="15 min"
                app:chipBackgroundColor="@color/colorSecondary"
                app:chipIcon="@drawable/ic_add" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip30m"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="30 min"
                app:chipBackgroundColor="@color/colorSecondary"
                app:chipIcon="@drawable/ic_add" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip60m"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="60 min"
                app:chipBackgroundColor="@color/colorSecondary"
                app:chipIcon="@drawable/ic_add" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            style="@style/TextAppearance.AppTheme.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:gravity="start"
            android:padding="3dp"
            android:text="0 min" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            style="@style/TextAppearance.AppTheme.Body1"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/onboarding_text_pref_time1"
            android:textSize="16sp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/setTimeHome"
            android:layout_width="135dp"
            android:layout_height="25dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="3dp"
            android:layout_weight="3"
            android:background="@android:color/transparent"
            android:gravity="start|center_vertical"
            android:text="Set time"
            android:textColor="@color/colorPrimaryDark" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">


        <TextView
            android:id="@+id/onboarding_time_text1"
            style="@style/TextAppearance.AppTheme.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:text="@string/onboarding_text_pref_time2"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/setTimeWork"
            android:layout_width="135dp"
            android:layout_height="25dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="3dp"
            android:layout_weight="3"
            android:background="@android:color/transparent"
            android:gravity="start|center_vertical"
            android:text="Set time"
            android:textColor="@color/colorPrimaryDark" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:gravity="bottom"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:strokeColor="@color/colorPrimaryDark"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            android:gravity="center"
            android:text="begin"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>




</LinearLayout>